# dj_jenkins

./: .gitignore  README.md  pyproject.toml  settings.py
dj_jenkins/: apps.py  urls.py
dj_jenkins/common/: enums.py  http_code.py
dj_jenkins/core/: __init__.py  j_folder.py  j_jenkins.py  j_job.py  j_job_build.py  j_pipeline.py  j_pipeline_build.py  j_pipeline_build_stage.py
dj_jenkins/migrations/: 0001_initial.py
dj_jenkins/models/: __init__.py  base.py  job.py  job_build.py  pipeline.py  pipeline_build.py  pipeline_build_stage.py
dj_jenkins/serializers/: __init__.py  job.py  job_build.py  pipeline.py  pipeline_build.py  pipeline_build_stage.py
dj_jenkins/tests/: test_j_jenkins.py  test_jenkins.py
dj_jenkins/utils/: __init__.py  j_job_build_util.py  j_job_util.py  j_pipeline_build_stage_util.py  j_pipeline_build_util.py  j_pipeline_util.py  job_build_util.py  job_util.py  pipeline_build_stage_util.py  pipeline_build_util.py  pipeline_util.py  time_util.py
dj_jenkins/views/: __init__.py  jenkins.py  job.py  job_build.py  pipeline.py  pipeline_build.py  pipeline_build_stage.py
